--- a/MS2_DeepLearningModel.ipynb
+++ b/MS2_DeepLearningModel.ipynb
@@ -766,7 +766,7 @@
         "                running_val_loss += losses.item()\n",
         "\n",
         "        # --- Epoch End ---\n",
-        "        # Print training loss (Validation loss is not calculated here)\n",
+        "        # Print training loss\n",
         "        print(f\"Epoch [{epoch+1}/{num_epochs}], Train Loss: {avg_train_loss:.4f}\")\n",
         "\n",
         "    print(\"Training finished.\")\n",
