final submission code update

--- a/code/dataset_setup.ipynb
+++ b/code/dataset_setup.ipynb
@@ -1,10 +1,16 @@
 {
  "cells": [
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "*Important Note:* This file is for downloading VisDrone data remotely from DropBox urls. It is designed to be run in your local environment (i.e. NOT Colab).",
+   "id": "59a9d9350d104321"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-25T02:01:18.483210Z",
-     "start_time": "2025-04-25T02:01:18.478351Z"
+     "end_time": "2025-05-18T20:22:07.475655Z",
+     "start_time": "2025-05-18T20:22:07.470228Z"
     }
    },
    "cell_type": "code",
@@ -72,13 +78,13 @@
    ],
    "id": "a1b07c002b2891ac",
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-25T02:27:45.000441Z",
-     "start_time": "2025-04-25T02:11:11.582325Z"
+     "end_time": "2025-05-18T20:24:02.380925Z",
+     "start_time": "2025-05-18T20:22:18.296162Z"
     }
    },
    "cell_type": "code",
@@ -92,24 +98,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading /Users/aidan/Documents/Courses/Deep Learning/deep_learning/data/VisDrone2019-DET-train.zip...\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
-      "\u001B[31mKeyboardInterrupt\u001B[39m                         Traceback (most recent call last)",
-      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[8]\u001B[39m\u001B[32m, line 2\u001B[39m\n\u001B[32m      1\u001B[39m \u001B[38;5;66;03m# Download and extract the training dataset\u001B[39;00m\n\u001B[32m----> \u001B[39m\u001B[32m2\u001B[39m \u001B[43mdownload_dataset\u001B[49m\u001B[43m(\u001B[49m\u001B[43mdropbox_url_train\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mzip_path_train\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mextract_dir_train\u001B[49m\u001B[43m)\u001B[49m\n",
-      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[5]\u001B[39m\u001B[32m, line 28\u001B[39m, in \u001B[36mdownload_dataset\u001B[39m\u001B[34m(url, output_zip, extract_dir)\u001B[39m\n\u001B[32m     26\u001B[39m     \u001B[38;5;66;03m# Download the file\u001B[39;00m\n\u001B[32m     27\u001B[39m     \u001B[38;5;28;01mwith\u001B[39;00m urllib.request.urlopen(url) \u001B[38;5;28;01mas\u001B[39;00m response, \u001B[38;5;28mopen\u001B[39m(output_zip, \u001B[33m'\u001B[39m\u001B[33mwb\u001B[39m\u001B[33m'\u001B[39m) \u001B[38;5;28;01mas\u001B[39;00m out_file:\n\u001B[32m---> \u001B[39m\u001B[32m28\u001B[39m         \u001B[43mshutil\u001B[49m\u001B[43m.\u001B[49m\u001B[43mcopyfileobj\u001B[49m\u001B[43m(\u001B[49m\u001B[43mresponse\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mout_file\u001B[49m\u001B[43m)\u001B[49m\n\u001B[32m     29\u001B[39m \u001B[38;5;28;01melse\u001B[39;00m:\n\u001B[32m     30\u001B[39m     \u001B[38;5;28mprint\u001B[39m(\u001B[33m\"\u001B[39m\u001B[33mZIP file already exists, skipping download.\u001B[39m\u001B[33m\"\u001B[39m)\n",
-      "\u001B[36mFile \u001B[39m\u001B[32m/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/shutil.py:203\u001B[39m, in \u001B[36mcopyfileobj\u001B[39m\u001B[34m(fsrc, fdst, length)\u001B[39m\n\u001B[32m    201\u001B[39m fsrc_read = fsrc.read\n\u001B[32m    202\u001B[39m fdst_write = fdst.write\n\u001B[32m--> \u001B[39m\u001B[32m203\u001B[39m \u001B[38;5;28;01mwhile\u001B[39;00m buf := \u001B[43mfsrc_read\u001B[49m\u001B[43m(\u001B[49m\u001B[43mlength\u001B[49m\u001B[43m)\u001B[49m:\n\u001B[32m    204\u001B[39m     fdst_write(buf)\n",
-      "\u001B[36mFile \u001B[39m\u001B[32m/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/http/client.py:479\u001B[39m, in \u001B[36mHTTPResponse.read\u001B[39m\u001B[34m(self, amt)\u001B[39m\n\u001B[32m    476\u001B[39m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28mself\u001B[39m.length \u001B[38;5;129;01mis\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m \u001B[38;5;129;01mand\u001B[39;00m amt > \u001B[38;5;28mself\u001B[39m.length:\n\u001B[32m    477\u001B[39m     \u001B[38;5;66;03m# clip the read to the \"end of response\"\u001B[39;00m\n\u001B[32m    478\u001B[39m     amt = \u001B[38;5;28mself\u001B[39m.length\n\u001B[32m--> \u001B[39m\u001B[32m479\u001B[39m s = \u001B[38;5;28;43mself\u001B[39;49m\u001B[43m.\u001B[49m\u001B[43mfp\u001B[49m\u001B[43m.\u001B[49m\u001B[43mread\u001B[49m\u001B[43m(\u001B[49m\u001B[43mamt\u001B[49m\u001B[43m)\u001B[49m\n\u001B[32m    480\u001B[39m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m s \u001B[38;5;129;01mand\u001B[39;00m amt:\n\u001B[32m    481\u001B[39m     \u001B[38;5;66;03m# Ideally, we would raise IncompleteRead if the content-length\u001B[39;00m\n\u001B[32m    482\u001B[39m     \u001B[38;5;66;03m# wasn't satisfied, but it might break compatibility.\u001B[39;00m\n\u001B[32m    483\u001B[39m     \u001B[38;5;28mself\u001B[39m._close_conn()\n",
-      "\u001B[36mFile \u001B[39m\u001B[32m/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/socket.py:707\u001B[39m, in \u001B[36mSocketIO.readinto\u001B[39m\u001B[34m(self, b)\u001B[39m\n\u001B[32m    705\u001B[39m \u001B[38;5;28;01mwhile\u001B[39;00m \u001B[38;5;28;01mTrue\u001B[39;00m:\n\u001B[32m    706\u001B[39m     \u001B[38;5;28;01mtry\u001B[39;00m:\n\u001B[32m--> \u001B[39m\u001B[32m707\u001B[39m         \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28;43mself\u001B[39;49m\u001B[43m.\u001B[49m\u001B[43m_sock\u001B[49m\u001B[43m.\u001B[49m\u001B[43mrecv_into\u001B[49m\u001B[43m(\u001B[49m\u001B[43mb\u001B[49m\u001B[43m)\u001B[49m\n\u001B[32m    708\u001B[39m     \u001B[38;5;28;01mexcept\u001B[39;00m timeout:\n\u001B[32m    709\u001B[39m         \u001B[38;5;28mself\u001B[39m._timeout_occurred = \u001B[38;5;28;01mTrue\u001B[39;00m\n",
-      "\u001B[36mFile \u001B[39m\u001B[32m/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/ssl.py:1252\u001B[39m, in \u001B[36mSSLSocket.recv_into\u001B[39m\u001B[34m(self, buffer, nbytes, flags)\u001B[39m\n\u001B[32m   1248\u001B[39m     \u001B[38;5;28;01mif\u001B[39;00m flags != \u001B[32m0\u001B[39m:\n\u001B[32m   1249\u001B[39m         \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mValueError\u001B[39;00m(\n\u001B[32m   1250\u001B[39m           \u001B[33m\"\u001B[39m\u001B[33mnon-zero flags not allowed in calls to recv_into() on \u001B[39m\u001B[38;5;132;01m%s\u001B[39;00m\u001B[33m\"\u001B[39m %\n\u001B[32m   1251\u001B[39m           \u001B[38;5;28mself\u001B[39m.\u001B[34m__class__\u001B[39m)\n\u001B[32m-> \u001B[39m\u001B[32m1252\u001B[39m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28;43mself\u001B[39;49m\u001B[43m.\u001B[49m\u001B[43mread\u001B[49m\u001B[43m(\u001B[49m\u001B[43mnbytes\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mbuffer\u001B[49m\u001B[43m)\u001B[49m\n\u001B[32m   1253\u001B[39m \u001B[38;5;28;01melse\u001B[39;00m:\n\u001B[32m   1254\u001B[39m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28msuper\u001B[39m().recv_into(buffer, nbytes, flags)\n",
-      "\u001B[36mFile \u001B[39m\u001B[32m/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/ssl.py:1104\u001B[39m, in \u001B[36mSSLSocket.read\u001B[39m\u001B[34m(self, len, buffer)\u001B[39m\n\u001B[32m   1102\u001B[39m \u001B[38;5;28;01mtry\u001B[39;00m:\n\u001B[32m   1103\u001B[39m     \u001B[38;5;28;01mif\u001B[39;00m buffer \u001B[38;5;129;01mis\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m:\n\u001B[32m-> \u001B[39m\u001B[32m1104\u001B[39m         \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28;43mself\u001B[39;49m\u001B[43m.\u001B[49m\u001B[43m_sslobj\u001B[49m\u001B[43m.\u001B[49m\u001B[43mread\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;28;43mlen\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mbuffer\u001B[49m\u001B[43m)\u001B[49m\n\u001B[32m   1105\u001B[39m     \u001B[38;5;28;01melse\u001B[39;00m:\n\u001B[32m   1106\u001B[39m         \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28mself\u001B[39m._sslobj.read(\u001B[38;5;28mlen\u001B[39m)\n",
-      "\u001B[31mKeyboardInterrupt\u001B[39m: "
+      "Downloading /Users/aidan/Documents/Courses/Deep Learning/deep_learning/data/VisDrone2019-DET-train.zip...\n",
+      "Extracting /Users/aidan/Documents/Courses/Deep Learning/deep_learning/data/VisDrone2019-DET-train.zip to /Users/aidan/Documents/Courses/Deep Learning/deep_learning/data/VisDrone2019-DET-train...\n",
+      "Dataset /Users/aidan/Documents/Courses/Deep Learning/deep_learning/data/VisDrone2019-DET-train.zip processing complete.\n"
      ]
     }
    ],
@@ -118,8 +109,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-25T02:08:22.270763Z",
-     "start_time": "2025-04-25T02:08:09.391210Z"
+     "end_time": "2025-05-18T20:24:12.210423Z",
+     "start_time": "2025-05-18T20:24:02.392847Z"
     }
    },
    "cell_type": "code",
@@ -139,13 +130,13 @@
      ]
     }
    ],
-   "execution_count": 7
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-25T02:03:38.732856Z",
-     "start_time": "2025-04-25T02:01:50.790160Z"
+     "end_time": "2025-05-18T20:24:36.466045Z",
+     "start_time": "2025-05-18T20:24:12.220665Z"
     }
    },
    "cell_type": "code",
@@ -165,7 +156,7 @@
      ]
     }
    ],
-   "execution_count": 6
+   "execution_count": 10
   }
  ],
  "metadata": {
